--- a/apps/QrCoDe.en/20100429zxfags/qrgen.css
+++ b/apps/QrCoDe.en/20100429zxfags/qrgen.css
@@ -1,12 +1,12 @@
 body {
   font-family: 'Kanit', sans-serif;
-  background: linear-gradient(to right, #ffdde1, #ee9ca7);
+  background: linear-gradient(to right, #c4f6ff, #23dfff);
   margin: 0;
   padding: 0;
   display: flex;
   justify-content: center;
-  align-items: start;
-  height: 100vh;
+  align-items: center;
+  height: 100dvh;
 }
 
 .container {
@@ -18,6 +18,8 @@ body {
   width: 90%;
   max-width: 500px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 textarea, input, select {
@@ -40,14 +42,14 @@ button {
   margin-top: 10px;
   border: none;
   border-radius: 10px;
-  background-color: #ee6c4d;
+  background-color: #23dfff;
   color: white;
   font-size: 16px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #d3543f;
+  background-color: #10dfff;
 }
 
 .qr-preview {
